update same files

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Thiago Leite",
-            "email": "thiago@letsevolve.com.br"
+            "email": "thiago@uol.com.br"
         }
     ],
     "require": {}
